--- a/HTML:CSS /index.html
+++ b/HTML:CSS /index.html
@@ -7,6 +7,20 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Adarsh Pandey</h1>
+<h1>Adarsh</h1>
+<h2>Adarsh</h2>
+<h3>Adarsh</h3>
+<h4>Adarsh</h4>
+<h5>Adarsh</h5>
+<h6> Adarsh</h6>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti aliquam praesentium maxime sapiente, a dolores expedita mollitia ab! Neque, nobis laudantium aut explicabo error nam nostrum ab exercitationem blanditiis aperiam?</p>
+<ol type="A">
+    <h2>My Name List</h2>
+    <li>Adarsh</li>
+    <li>Rahul</li>
+    <li>Aman</li>
+    <li>Ankit</li>
+    <li>Mohit</li>
+</ol>
 </body>
 </html>
