--- a/HTML:CSS /index.html
+++ b/HTML:CSS /index.html
@@ -6,21 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-<h1>Adarsh</h1>
+<body bgcolor="lightblue">
+<!-- <h1>Adarsh</h1>
 <h2>Adarsh</h2>
 <h3>Adarsh</h3>
 <h4>Adarsh</h4>
 <h5>Adarsh</h5>
-<h6> Adarsh</h6>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti aliquam praesentium maxime sapiente, a dolores expedita mollitia ab! Neque, nobis laudantium aut explicabo error nam nostrum ab exercitationem blanditiis aperiam?</p>
+<h6> Adarsh</h6> -->
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+    Corrupti aliquam praesentium maxime sapiente, a dolores expedita mollitia ab! Neque, 
+    nobis laudantium aut explicabo error nam nostrum ab exercitationem blanditiis aperiam?</p>
 <ol type="A">
-    <h2>My Name List</h2>
+    <h2>orderd List</h2>
     <li>Adarsh</li>
     <li>Rahul</li>
     <li>Aman</li>
     <li>Ankit</li>
     <li>Mohit</li>
 </ol>
+<h1>Unorded list</h1>
+<!-- two attributes in ul tag 1 circle , 2 square -->
+<ul type="circle">  
+    <li>HTML</li>
+    <li>CSS</li>
+    <li>JAVA</li>
+    <li>PHP</li>
+    <img height="300px" width="300px" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTOJ-d07MI21CJ3wGgK-NYhpZlnrzeZWGJ3HA&s" alt="">
+</ul>
 </body>
 </html>
+
+<!--  U tag ,i tag, b tag, strong tag . diff btn b tag and strong tag -->
