--- a/HTML:CSS /taskone.html
+++ b/HTML:CSS /taskone.html
@@ -9,7 +9,7 @@
     <h1>Name:Adarsh Pandey</h1> 
    <h2>Content: 8090587220</h2>
     <h2>Email:pandeyadarsh@gmail.com</h2>
-    <img scr="car.jpg" alt="car" width="300" height="300">
+   <img src="car.jpg" alt="" height="200" > 
     <h2>Hobbis</h2>
     <ul>
         <li>Cricket Playing</li>
