new commit "link file"

--- a/HTML:CSS /index.html
+++ b/HTML:CSS /index.html
@@ -16,7 +16,7 @@
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
     Corrupti aliquam praesentium maxime sapiente, a dolores expedita mollitia ab! Neque, 
     nobis laudantium aut explicabo error nam nostrum ab exercitationem blanditiis aperiam?</p>
-<ol type="A">
+<!-- <ol type="A">
     <h2>orderd List</h2>
     <li>Adarsh</li>
     <li>Rahul</li>
@@ -24,15 +24,21 @@
     <li>Ankit</li>
     <li>Mohit</li>
 </ol>
-<h1>Unorded list</h1>
+<h1>Unorded list</h1> -->
 <!-- two attributes in ul tag 1 circle , 2 square -->
-<ul type="circle">  
+<!-- <ul type="circle">  
     <li>HTML</li>
     <li>CSS</li>
+    <li>JavaScript</li>
     <li>JAVA</li>
     <li>PHP</li>
     <img height="300px" width="300px" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTOJ-d07MI21CJ3wGgK-NYhpZlnrzeZWGJ3HA&s" alt="">
-</ul>
+</ul> -->
+
+<audio src="rain.mp3" controls loop autoplay muted></audio>
+<video src="https://www.pexels.com/video/a-cloud-of-blue-green-paint-underwater-7565438/"></video>
+<a href="https://www.pexels.com/video/a-cloud-of-blue-green-paint-underwater-7565438/">click here</a>
+
 </body>
 </html>
 
