--- a/HTML:CSS /index.html
+++ b/HTML:CSS /index.html
@@ -36,7 +36,7 @@
 </ul> -->
 
 <audio src="rain.mp3" controls loop autoplay muted></audio>
-<video src="https://www.pexels.com/video/a-cloud-of-blue-green-paint-underwater-7565438/"></video>
+<video src=""></video>
 <a href="https://www.pexels.com/video/a-cloud-of-blue-green-paint-underwater-7565438/">click here</a>
 
 </body>
